modified Jekyll's minima theme to optimize it

--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,28 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Lin Ran's Blog
+title: 林染's Blog
 email: lin_ran913@163.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "linran913.github.io" # the subpath of your site, e.g. /blog
+
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://linran913.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
 github_username:  linran913
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+permalink: /:year/:month/:title:output_ext
+
+#defaults:
+#  -
+#    scope:
+#      path: "_posts/other"
+#      type: "pages"
+#    values:
+#      category: "other"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
